--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,17 +1,6 @@
 unbind C-b
 set -g prefix C-h
 set-option -g allow-rename off
-# set-option -g history-limit 5000
-
-# copy & paste between tmux and x clipboard; depends on xclip
-#bind C-p run-shell "tmux set-buffer \"$(xclip -o)\"; tmux paste-buffer"
-#bind C-y run-shell "tmux show-buffer | xclip -sel clip -i"
-
-# from http://stackoverflow.com/questions/10543684/how-can-i-clear-scrollback-buffer-in-tmux
-# Actually, this sucks. I loose Ctrl-k which kills a line (Ctrl-y to yank it back, yo).
-# Using l, which has the added benefit of also clearing the terminal 
-# Aw, this sucks too. It steals Ctrl-l from the terminal (doesn't work anymore)
-#bind -n C-l clear-history
 
 # http://joncairns.com/2013/06/copying-between-tmux-buffers-and-the-system-clipboard/
 setw -g mode-keys vi
@@ -20,9 +9,7 @@ bind-key -t vi-copy 'y' copy-selection
 
 bind y run-shell "tmux show-buffer | xclip -sel clip -i" \; display-message "Copied tmux buffer to system clipboard"
 
-# if more than trigger lines (c0) per ms, update only every interval
-# # this mitigates the impact of text floods on tmux trying to catch up
-# # when I might want to Ctrl-C or the like
-# BUT I need tmux 1.7 for this.
-#setw -g c0-change-interval 250
-#setw -g c0-change-trigger 5
+# http://unix.stackexchange.com/a/118381/72492
+bind '"' split-window -c "#{pane_current_path}"
+bind % split-window -h -c "#{pane_current_path}"
+bind c new-window -c "#{pane_current_path}"
